# ros2-notes

./: README (1).md  README.md  publisher.py  week-2 task  week-2.md  week1.md
game/: package.xml  setup.py
game/game/: game_publisher.py  game_subscriber.py  test_publisher.py
install/: setup.ps1
log/: latest_build
my_robot_controller/: package.xml  setup.py
my_robot_controller/my_robot_controller/: my_first_node.py
service/: package.xml  setup.py
service/service/: service_client.py  service_creation.py
src/action_interface/: CMakeLists.txt
src/action_interface/action/: Shape.action
src/action_interface/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/action_interface/log/: latest_build
src/action_server/: package.xml  setup.py
src/action_server/action_server/: rotation_server.py  shape_client.py  shape_server.py  simple_publisher.py  simple_subscriber.py
src/action_server/install/: setup.bash  (+2 more)
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/launcher/: CMakeLists.txt  package.xml
src/launcher/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/launcher/install/launcher/share/ament_index/resource_index/package_run_dependencies/: launcher
src/launcher/install/launcher/share/launcher/: local_setup.sh  package.sh  package.xml
src/launcher/install/launcher/share/launcher/launch/: launcher.launch.py
src/launcher/launch/: include_launcher.launch.py  launcher.launch.py
src/launcher/log/: latest_build
src/lidar_based_contoller/: package.xml  setup.cfg  setup.py
src/log/: latest_build
src/my_custom_interface/: CMakeLists.txt  package.xml
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: gazebo_sim.launch.py  my_robot_bringup.launch.py  stopper_launch.launch.py
src/my_robot_description/meshes/: model.dae
src/my_robot_description/urdf/: camer_plugin.urdf.xacro  depth_camera_plugin.urdf.xacro  gazebo_control_plugin.urdf.xacro  lidar_plugin.urdf.xacro  my_robot.urdf.xacro
src/my_robot_description/worlds/: my_world.world  world2.world
src/opencv/: package.xml  setup.py
src/opencv_ros/: package.xml  setup.py
src/transformation/: package.xml  setup.cfg  setup.py
src/turtlesim_controller/: package.xml  setup.py
src/week1/: package.xml  setup.py
src/yolo/: package.xml  setup.py
src/yolov8_msgs/: CMakeLists.txt
tweak/: package.xml  setup.cfg  setup.py
tweak/tweak/: demo.py  parameter.py  publisher.py  service_client.py  service_server.py  subscriber.py
week1/: package.xml  setup.py
week1/week1/: publisher.py  subscriber.py
(+114 files in other folders)
