<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launcher</name>
  <version>0.0.0</version>
  <description>Standalone package for launching nodes from other packages.</description>
  <maintainer email="suryaatphase2@gmail.com">surya</maintainer>
  <license>Apache-2.0</license>  <!-- Replace with actual license if different -->

  <!-- Required build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>week1</exec_depend> <!-- The package you're launching nodes from -->

  <!-- Optional test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
